--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -10,5 +10,22 @@
     "aboutMe.err.startDate": "La fecha de inicio es obligatoria",
     "aboutMe.err.endDate": "Se requiere fecha de finalización o activar trabajo actual",
     "aboutMe.err.enProject": "Se requiere proyecto en inglés",
-    "aboutMe.err.enSkills": "Se requieren habilidades en inglés"
+    "aboutMe.err.enSkills": "Se requieren habilidades en inglés",
+    "createExperience": "Crear experiencia laboral",
+    "createExperience.title": "Titulo del trabajo",
+    "createExperience.resume": "Resumen del trabajo",
+    "createExperience.startDate": "Fecha de inicio",
+    "createExperience.endDate": "Fecha de finalización",
+    "createExperience.project": "Proyecto del trabajo",
+    "createExperience.skills": "Habilidades",
+    "createExperience.urlToProject": "Pagina web del proyecto",
+    "createExperience.currentWork": "Trabajo actual",
+    "save": "Guardar",
+    "cancel": "Cancelar",
+    "actions": "Acciones",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "confirm": "Confirmación",
+    "deleteRecord": "¿Quieres eliminar este registro?",
+    "genericList.notElement": "No hay ningún elemento que mostrar"
 }
