--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -20,6 +20,7 @@
     "createExperience.skills": "Habilidades",
     "createExperience.urlToProject": "Pagina web del proyecto",
     "createExperience.currentWork": "Trabajo actual",
+    "editExperience": "Editar esta experiencia laboral: {{param}}",
     "save": "Guardar",
     "cancel": "Cancelar",
     "actions": "Acciones",
