--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -20,6 +20,7 @@
     "createExperience.skills": "Skills",
     "createExperience.urlToProject": "The link of the project",
     "createExperience.currentWork": "Current job",
+    "createExperience.companyName": "Company Name",
     "editExperience": "Edit this job experience: {{param}}",
     "save": "Save",
     "cancel": "Cancel",
