finish edit component

--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -11,6 +11,7 @@
     "aboutMe.err.endDate": "End date is required or activate current work",
     "aboutMe.err.enProject": "Project in English is required",
     "aboutMe.err.enSkills": "Skills in English is required",
+    "aboutMe.err.companyName": "Company name is required",
     "createExperience": "Create job experience",
     "createExperience.title": "Job title",
     "createExperience.resume": "Resume of the job",
@@ -21,7 +22,7 @@
     "createExperience.urlToProject": "The link of the project",
     "createExperience.currentWork": "Current job",
     "createExperience.companyName": "Company Name",
-    "editExperience": "Edit this job experience: {{param}}",
+    "editExperience": "Edit this job experience",
     "save": "Save",
     "cancel": "Cancel",
     "actions": "Actions",
