--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -11,6 +11,7 @@
     "aboutMe.err.endDate": "Se requiere fecha de finalización o activar trabajo actual",
     "aboutMe.err.enProject": "Se requiere proyecto en inglés",
     "aboutMe.err.enSkills": "Se requieren habilidades en inglés",
+    "aboutMe.err.companyName": "Se requiere nombre de la compañia",
     "createExperience": "Crear experiencia laboral",
     "createExperience.title": "Titulo del trabajo",
     "createExperience.resume": "Resumen del trabajo",
@@ -21,7 +22,7 @@
     "createExperience.urlToProject": "Pagina web del proyecto",
     "createExperience.currentWork": "Trabajo actual",
     "createExperience.companyName": "Nombre de la compania",
-    "editExperience": "Editar esta experiencia laboral: {{param}}",
+    "editExperience": "Editar esta experiencia laboral",
     "save": "Guardar",
     "cancel": "Cancelar",
     "actions": "Acciones",
