move experience functionality from about me to experience

--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -12,6 +12,7 @@
     "aboutMe.err.enProject": "Project in English is required",
     "aboutMe.err.enSkills": "Skills in English is required",
     "aboutMe.err.companyName": "Company name is required",
+    "experience": "Experience",
     "createExperience": "Create job experience",
     "createExperience.title": "Job title",
     "createExperience.resume": "Resume of the job",
