--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -12,6 +12,7 @@
     "aboutMe.err.enProject": "Se requiere proyecto en inglés",
     "aboutMe.err.enSkills": "Se requieren habilidades en inglés",
     "aboutMe.err.companyName": "Se requiere nombre de la compañia",
+    "experience": "Experiencia",
     "createExperience": "Crear experiencia laboral",
     "createExperience.title": "Titulo del trabajo",
     "createExperience.resume": "Resumen del trabajo",
