--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -5,13 +5,6 @@
     "home": "Home",
     "showStrings": "Show translate strings",
     "aboutMe": "About me",
-    "aboutMe.err.entitle": "Title in English is required",
-    "aboutMe.err.enResume": "Resume in English is required",
-    "aboutMe.err.startDate": "Start date is required",
-    "aboutMe.err.endDate": "End date is required or activate current work",
-    "aboutMe.err.enProject": "Project in English is required",
-    "aboutMe.err.enSkills": "Skills in English is required",
-    "aboutMe.err.companyName": "Company name is required",
     "experience": "Experience",
     "createExperience": "Create job experience",
     "createExperience.title": "Job title",
@@ -24,6 +17,26 @@
     "createExperience.currentWork": "Current job",
     "createExperience.companyName": "Company Name",
     "editExperience": "Edit this job experience",
+    "experience.err.entitle": "Title in English is required",
+    "experience.err.enResume": "Resume in English is required",
+    "experience.err.startDate": "Start date is required",
+    "experience.err.endDate": "End date is required or activate current work",
+    "experience.err.enProject": "Project in English is required",
+    "experience.err.enSkills": "Skills in English is required",
+    "experience.err.companyName": "Company name is required",
+    "authorization": "Authorization",
+    "authorization.login": "Login",
+    "authorization.register": "Register",
+    "authorization.registerHere": "Register here",
+    "authorization.haveAccount": "Don't have an account?",
+    "authorization.email": "Email",
+    "authorization.username": "Username",
+    "authorization.password": "Password",
+    "authorization.err.email.required": "Email is required",
+    "authorization.err.email.valid": "Enter a valid email",
+    "authorization.err.password": "Password is required",
+    "authorization.err.username.required": "Username is required",
+    "authorization.err.username.picked": "That username has already been chosen",
     "save": "Save",
     "cancel": "Cancel",
     "actions": "Actions",
@@ -31,5 +44,7 @@
     "delete": "Delete",
     "confirm": "Confirm",
     "deleteRecord": "Do you want to delete this record?",
-    "genericList.notElement": "There is not element to show"
+    "genericList.notElement": "There is not element to show",
+    "propierty": "Propierty",
+    "value": "Value"
 }
