--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -5,13 +5,6 @@
     "home": "Inicio",
     "showStrings": "Mostrar lineas traducidas",
     "aboutMe": "Acerca de mí",
-    "aboutMe.err.entitle": "Se requiere título en inglés",
-    "aboutMe.err.enResume": "Se requiere currículum en inglés",
-    "aboutMe.err.startDate": "La fecha de inicio es obligatoria",
-    "aboutMe.err.endDate": "Se requiere fecha de finalización o activar trabajo actual",
-    "aboutMe.err.enProject": "Se requiere proyecto en inglés",
-    "aboutMe.err.enSkills": "Se requieren habilidades en inglés",
-    "aboutMe.err.companyName": "Se requiere nombre de la compañia",
     "experience": "Experiencia",
     "createExperience": "Crear experiencia laboral",
     "createExperience.title": "Titulo del trabajo",
@@ -24,6 +17,26 @@
     "createExperience.currentWork": "Trabajo actual",
     "createExperience.companyName": "Nombre de la compania",
     "editExperience": "Editar esta experiencia laboral",
+    "experience.err.entitle": "Se requiere título en inglés",
+    "experience.err.enResume": "Se requiere currículum en inglés",
+    "experience.err.startDate": "La fecha de inicio es obligatoria",
+    "experience.err.endDate": "Se requiere fecha de finalización o activar trabajo actual",
+    "experience.err.enProject": "Se requiere proyecto en inglés",
+    "experience.err.enSkills": "Se requieren habilidades en inglés",
+    "experience.err.companyName": "Se requiere nombre de la compañia",
+    "authorization": "Autorización",
+    "authorization.login": "Iniciar sesión",
+    "authorization.register": "Regístrate",
+    "authorization.registerHere": "Regístrate aquí",
+    "authorization.haveAccount": "¿No tienes una cuenta?",
+    "authorization.email": "Correo electrónico",
+    "authorization.username": "Nombre de usuario",
+    "authorization.password": "Contraseña",
+    "authorization.err.email.required": "Se requiere correo electrónico",
+    "authorization.err.email.valid": "Introduzca un correo electrónico válido",
+    "authorization.err.password": "Se requiere contraseña",
+    "authorization.err.username.required": "El nombre de usuario es obligatorio",
+    "authorization.err.username.picked": "Ese nombre de usuario ya ha sido elegido",
     "save": "Guardar",
     "cancel": "Cancelar",
     "actions": "Acciones",
@@ -31,5 +44,7 @@
     "delete": "Eliminar",
     "confirm": "Confirmación",
     "deleteRecord": "¿Quieres eliminar este registro?",
-    "genericList.notElement": "No hay ningún elemento que mostrar"
+    "genericList.notElement": "No hay ningún elemento que mostrar",
+    "propierty": "Propiedad",
+    "value": "Valor"
 }
