adding functionality to login and register

--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -25,18 +25,23 @@
     "experience.err.enSkills": "Skills in English is required",
     "experience.err.companyName": "Company name is required",
     "authorization": "Authorization",
+    "authorization.welcome": "Welcome",
     "authorization.login": "Login",
+    "authorization.logout": "Logout",
     "authorization.register": "Register",
     "authorization.registerHere": "Register here",
     "authorization.haveAccount": "Don't have an account?",
     "authorization.email": "Email",
     "authorization.username": "Username",
     "authorization.password": "Password",
+    "authorization.usernameOrEmail": "Username / Email",
     "authorization.err.email.required": "Email is required",
     "authorization.err.email.valid": "Enter a valid email",
     "authorization.err.password": "Password is required",
     "authorization.err.username.required": "Username is required",
     "authorization.err.username.picked": "That username has already been chosen",
+    "authorization.err.falseLogin": "Username, Email or password is incorrect",
+    "authorization.err.claimAlready": "Claim already picked",
     "save": "Save",
     "cancel": "Cancel",
     "actions": "Actions",
