--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -25,18 +25,23 @@
     "experience.err.enSkills": "Se requieren habilidades en inglés",
     "experience.err.companyName": "Se requiere nombre de la compañia",
     "authorization": "Autorización",
+    "authorization.welcome": "Bienvenido",
     "authorization.login": "Iniciar sesión",
+    "authorization.logout": "Cerrar sesión",
     "authorization.register": "Regístrate",
     "authorization.registerHere": "Regístrate aquí",
     "authorization.haveAccount": "¿No tienes una cuenta?",
     "authorization.email": "Correo electrónico",
     "authorization.username": "Nombre de usuario",
     "authorization.password": "Contraseña",
+    "authorization.usernameOrEmail": "Nombre de usuario / Correo electrónico",
     "authorization.err.email.required": "Se requiere correo electrónico",
     "authorization.err.email.valid": "Introduzca un correo electrónico válido",
     "authorization.err.password": "Se requiere contraseña",
     "authorization.err.username.required": "El nombre de usuario es obligatorio",
     "authorization.err.username.picked": "Ese nombre de usuario ya ha sido elegido",
+    "authorization.err.falseLogin": "Nombre de usuario, correo electrónico o contraseña es incorrecta",
+    "authorization.err.claimAlready": "Claim ya fue agarrado",
     "save": "Guardar",
     "cancel": "Cancelar",
     "actions": "Acciones",
