--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -48,8 +48,17 @@
     "edit": "Edit",
     "delete": "Delete",
     "confirm": "Confirm",
+    "modify": "Modify",
     "deleteRecord": "Do you want to delete this record?",
     "genericList.notElement": "There is not element to show",
     "propierty": "Propierty",
-    "value": "Value"
+    "value": "Value",
+    "controlPanel": "Control panel",
+    "controlPanel.users": "Users control panel",
+    "controlPanel.users.removed": "User {{value}} was successfully removed",
+    "controlPanel.users.err.remove": "You cannot delete the same user",
+    "controlPanel.users.description": "Modify claims or delete a user",
+    "controlPanel.users.removePermision" : "¿Quieres eliminar el usuario {{value}}?",
+    "success": "Success",
+    "error": "Error"
 }
