add footer admin guard interceptors experience

--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -68,5 +68,6 @@
     "success": "Success",
     "error": "Error",
     "return": "Retrun",
-    "reload": "Reload"
+    "reload": "Reload",
+    "filter": "Filter"
 }
