--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -68,5 +68,6 @@
     "success": "Éxito",
     "error": "Error",
     "return": "Regresa",
-    "reload": "Recargar"
+    "reload": "Recargar",
+    "filter": "Filtro"
 }
