contact me footer

--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -69,5 +69,7 @@
     "error": "Error",
     "return": "Retrun",
     "reload": "Reload",
-    "filter": "Filter"
+    "filter": "Filter",
+    "copyrights": "All copyrights to Alejandro Rodríguez Navarro.",
+    "contactMe": "Contact me"
 }
