--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -69,5 +69,7 @@
     "error": "Error",
     "return": "Regresa",
     "reload": "Recargar",
-    "filter": "Filtro"
+    "filter": "Filtro",
+    "copyrights": "Todos los derechos reservados a Alejandro Rodríguez Navarro.",
+    "contactMe": "Contáctame"
 }
