Adding network and about me functionality

--- a/angular-myownweb/public/i18n/en.json
+++ b/angular-myownweb/public/i18n/en.json
@@ -5,6 +5,17 @@
     "home": "Home",
     "showStrings": "Show translate strings",
     "aboutMe": "About me",
+    "aboutMe.title": "About me title",
+    "aboutMe.description": "About me description",
+    "aboutMe.tag": "About me tag",
+    "aboutMe.tag.mainDescription": "Main description",
+    "aboutMe.tag.hobby": "Hobby",
+    "aboutMe.tag.project": "Project",
+    "aboutMe.tag.certificate": "Certificate",
+    "aboutMe.pictures": "About me pictures",
+    "aboutMe.err.enTitle": "Title in English is required",
+    "aboutMe.err.enDescription": "Description in English is required",
+    "aboutMe.err.tag": "Tag is required",
     "experience": "Work experience",
     "createExperience": "Create job experience",
     "createExperience.title": "Job title",
@@ -65,6 +76,8 @@
     "controlPanel.users.removePermision" : "Do you want to delete user {{value}}?",
     "controlPanel.experience": "Experiences control panel",
     "controlPanel.experience.description": "Add or modify work experiences",
+    "controlPanel.aboutMe": "About me control panel",
+    "controlPanel.aboutMe.description": "Add or modify hobbies or projects",
     "success": "Success",
     "error": "Error",
     "return": "Retrun",
@@ -85,5 +98,6 @@
     "contactMe.err.message" : "Message is required",
     "contactMe.err.message.length" : "The message must have at least {{value}} characters",
     "look": "Look",
-    "id": "Id"
+    "id": "Id",
+    "myNetworks": "My social networks"
 }
