--- a/angular-myownweb/public/i18n/es.json
+++ b/angular-myownweb/public/i18n/es.json
@@ -5,6 +5,17 @@
     "home": "Inicio",
     "showStrings": "Mostrar lineas traducidas",
     "aboutMe": "Acerca de mí",
+    "aboutMe.title": "Título sobre mí",
+    "aboutMe.description": "Descripción sobre mí",
+    "aboutMe.tag": "Etiqueta sobre mí",
+    "aboutMe.tag.mainDescription": "Descripción principal",
+    "aboutMe.tag.hobby": "Pasatiempo",
+    "aboutMe.tag.project": "Proyecto",
+    "aboutMe.tag.certificate": "Certificado",
+    "aboutMe.pictures": "Fotos sobre mí",
+    "aboutMe.err.enTitle": "Se requiere título en inglés",
+    "aboutMe.err.enDescription": "Se requiere descripción en inglés",
+    "aboutMe.err.tag": "La etiqueta es obligatoria",
     "experience": "Experiencia laboral",
     "createExperience": "Crear experiencia laboral",
     "createExperience.title": "Titulo del trabajo",
@@ -65,6 +76,8 @@
     "controlPanel.users.removePermision" : "¿Quieres eliminar el usuario {{value}}?",
     "controlPanel.experience": "Panel de control de experiencias laborales",
     "controlPanel.experience.description": "Agrega o modifica las experiencias laborales",
+    "controlPanel.aboutMe": "Panel de control acerca de mí",
+    "controlPanel.aboutMe.description": "Agregar o modificar pasatiempos o proyectos",
     "success": "Éxito",
     "error": "Error",
     "return": "Regresa",
@@ -85,5 +98,6 @@
     "contactMe.err.message" : "El mensaje es obligatorio",
     "contactMe.err.message.length" : "El mensaje debe tener al menos {{value}} caracteres",
     "look": "Mirar",
-    "id": "Identificación"
+    "id": "Identificación",
+    "myNetworks": "Mis redes sociales"
 }
